<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".views.fragments.addCarPage.AddCarFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:translationX="200dp"
        android:translationY="-150dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/transparent_circle"
        />

    <View
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:translationX="-150dp"
        android:translationY="70dp"
        android:background="@drawable/transparent_circle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <ImageView
            android:id="@+id/car_image"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:src="@drawable/ic_car"
            />

        <TextView
            android:id="@+id/text_take_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_car_picture"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginVertical="16dp"
            android:gravity="center"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            style="@style/Widget.App.TextInputLayout"
            android:layout_marginHorizontal="@dimen/margin_high"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_brand"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusForward="@id/edit_text_plate"
                android:hint="@string/brand"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_plate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginHorizontal="@dimen/margin_high"
            android:layout_marginTop="@dimen/margin_medium"
            style="@style/Widget.App.TextInputLayout"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_text_plate"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:hint="@string/plate"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_medium"
            style="@style/Widget.App.Button"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:text="@string/save"
            />

        <Button
            android:id="@+id/button_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_medium"
            style="@style/Widget.App.Button"
            android:backgroundTint="@color/red"
            android:text="@string/cancel"
            />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
