<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_date_picker_fragment"
    tools:context=".views.fragments.DatePickFragment">

    <TextView
        android:id="@+id/text_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/start_date"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start_date"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="12 Aug 2021"
        android:textColor="@color/black"
        android:gravity="center"
        style="?android:spinnerStyle"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_start_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_start_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/start_time"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start_date" />


    <Button
        android:id="@+id/button_start_time"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="12:00"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_start_time"
        />


    <TextView
        android:id="@+id/text_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:text="@string/end_data"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start_time" />

    <Button
        android:id="@+id/button_end_date"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        android:text="12 Aug 2021"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/text_end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/text_end_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/end_time"
        android:layout_margin="16dp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/button_end_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:id="@+id/button_end_time"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="12:00"
        android:textColor="@color/black"
        style="?android:spinnerStyle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_end_time"
        />

    <Button
        android:id="@+id/button_filter"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="25dp"
        android:text="@string/filter"
        />


</androidx.constraintlayout.widget.ConstraintLayout>